--- a/src/main/metadata-au/classes/UtilConstant.cls
+++ b/src/main/metadata-au/classes/UtilConstant.cls
@@ -5,7 +5,7 @@ Global with sharing class UtilConstant {
     public final static String DEALER_DELEGATE_ADMIN = 'Dealer Delegate Admin';
     public final static String DEALER_COMMUNITY_USER = 'Dealer Community User';
     public final static String SALES_LEADS = 'Vehicle Lead';
-    public final static String AFTER_SALES_LEADS = 'Service/Parts Lead';
+    public final static String AFTER_SALES_LEADS = 'Service Lead';
     public final static String RETAIL_SALES_LEADS = 'Retail Sales Leads';
     public final static String AS_RETAIL_CAMPAIGN = 'AS Retail Campaign';
     public final static String DEALER_LEAD_GATE_KEEPER_QUEUE = 'Dealer Lead Gate Keeper Queue';
